--- a/thailand_website/HTML/destination_pages/Krabi.html
+++ b/thailand_website/HTML/destination_pages/Krabi.html
@@ -1,128 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Krabi | Come to Thailand</title>
-    <link type="text/css" rel="stylesheet" href="../../CSS/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/d085fdf720.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Krabi | Come to Thailand</title>
+        <link type="text/css" rel="stylesheet" href="../../CSS/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/d085fdf720.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
 
-    <!-- Navigation Section -->
-    <header>
-        <nav class="navbar" aria-label="Main Navigation">
-            <a href="../home.html"><h1>
-                Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
-            </h1></a>
-            <button class="hamburger" aria-label="Menu">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <ul class="nav-links">
-                <li><a href="../home.html">Home</a></li>
-                <li><a href="../destinations.html">Destinations</a></li>
-                <li><a href="../activities.html">Activities</a></li>
-                <li><a href="../events.html">Events</a></li>
-                <li><a href="../gallery.html">Gallery</a></li>
-            </ul>
-        </nav>
-    </header>
+        <!-- Navigation Section -->
+        <header>
+            <nav class="navbar" aria-label="Main Navigation">
+                <a href="../home.html"><h1>
+                    Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
+                </h1></a>
+                <button class="hamburger" aria-label="Menu">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <ul class="nav-links">
+                    <li><a href="../home.html">Home</a></li>
+                    <li><a href="../destinations.html">Destinations</a></li>
+                    <li><a href="../activities.html">Activities</a></li>
+                    <li><a href="../events.html">Events</a></li>
+                    <li><a href="../gallery.html">Gallery</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <!-- Main Page Section -->
-    <section class="page" id="#location_page">
+        <!-- Main Page Section -->
+        <section class="page" id="#location_page">
 
-        <!-- Title Section -->
-        <div id="location-title">
-            <h2>Krabi</h2>
-            <h3>The Gateway to Thailand's Andaman Coast</h3>
-        </div>
+            <!-- Title Section -->
+            <div id="location-title">
+                <h2>Krabi</h2>
+                <h3>The Gateway to Thailand's Andaman Coast</h3>
+            </div>
 
-        <a class="weatherwidget-io" href="https://forecast7.com/en/8d0998d91/krabi/" data-label_1="KRABI" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >KRABI WEATHER</a>
+            <a class="weatherwidget-io" href="https://forecast7.com/en/8d0998d91/krabi/" data-label_1="KRABI" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >KRABI WEATHER</a>
 
+            <!-- Dropdown Buttons -->
+            <div class="dropdown-section">
+                <!-- View Map Button -->
+                <button class="dropdown-toggle" id="toggle-map">View Map</button>
+            
+                <!-- View Gallery Button -->
+                <button class="dropdown-toggle" id="toggle-gallery">View Gallery</button>
+            </div>
 
-        <!-- Dropdown Section -->
-        <div class="map-dropdown">
-            <button class="dropdown-toggle">View Map</button>
-            <div class="dropdown-content">
-
+            <div class="dropdown-content" id="map-dropdown">
                 <!-- Google Map Section -->
-                <div class="google_map_container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505633.9269751114!2d98.6836527657824!3d8.074426424755227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30518d792d7f9309%3A0x10223bc2c364c90!2sKrabi%2C%20Thailand!5e0!3m2!1sen!2suk!4v1733464941712!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                
+                    <div class="google_map_container">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505633.9269751114!2d98.6836527657824!3d8.074426424755227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30518d792d7f9309%3A0x10223bc2c364c90!2sKrabi%2C%20Thailand!5e0!3m2!1sen!2suk!4v1733464941712!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
             </div>
-        </div>
 
-        <!-- Gallery Section -->
-        <div id="image-gallery">
-            <div class="gallery-container">
-                <button class="scroll-btn scroll-left" aria-label="Scroll left"></button>
-                <div class="gallery-scroll">
-                    <img src="../../img/gallery/krabi_1.jpeg" alt="Railay Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_2.webp" alt="Phi Phi Islands" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_3.webp" alt="Emerald Pool" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_4.jpg" alt="Tiger Cave Temple" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_5.jpg" alt="Hong Island" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_6.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_7.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_8.webp" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_9.webp" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_10.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_11.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_12.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_13.webp" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_14.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+
+            <!-- Gallery Section -->
+            <div class="dropdown-content" id="gallery-dropdown">
+                <div id="image-gallery">
+                    <div class="gallery-container">
+                        <button class="scroll-btn scroll-left" aria-label="Scroll left"></button>
+                        <div class="gallery-scroll">
+                            <img src="../../img/gallery/krabi_1.jpeg" alt="Railay Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_2.webp" alt="Phi Phi Islands" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_3.webp" alt="Emerald Pool" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_4.jpg" alt="Tiger Cave Temple" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_5.jpg" alt="Hong Island" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_6.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_7.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_8.webp" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_9.webp" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_10.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_11.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_12.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_13.webp" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/krabi_14.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                        </div>
+                        <button class="scroll-btn scroll-right" aria-label="Scroll right"></button>
+                    </div>
                 </div>
-                <button class="scroll-btn scroll-right" aria-label="Scroll right"></button>
             </div>
-        </div>
+            <!-- Description Section -->
+            <div id="location-description">
+                <h3>About Krabi</h3>
+                <p>
+                    Krabi is a coastal province in southern Thailand characterized by stunning limestone cliffs, lush mangrove forests, and over a hundred offshore islands. Known for its idyllic beaches, clear turquoise waters, and vibrant marine life, Krabi is a paradise for beach lovers and adventure seekers. From rock climbing at Railay Beach to exploring the Phi Phi Islands, Krabi offers a diverse range of activities that showcase the natural beauty of Thailand's Andaman Coast.
+                </p>
+            </div>
 
-        <!-- Description Section -->
-        <div id="location-description">
-            <h3>About Krabi</h3>
-            <p>
-                Krabi is a coastal province in southern Thailand characterized by stunning limestone cliffs, lush mangrove forests, and over a hundred offshore islands. Known for its idyllic beaches, clear turquoise waters, and vibrant marine life, Krabi is a paradise for beach lovers and adventure seekers. From rock climbing at Railay Beach to exploring the Phi Phi Islands, Krabi offers a diverse range of activities that showcase the natural beauty of Thailand's Andaman Coast.
-            </p>
-        </div>
+            <!-- Activities and Events Section -->
+            <div id="top-activities">
+                <h3>Top Rated Activities & Events</h3>
+                <ul>
+                    <li>Rock climb the limestone cliffs at Railay Beach.</li>
+                    <li>Take a boat tour to the famous Phi Phi Islands.</li>
+                    <li>Swim in the crystal-clear waters of the Emerald Pool.</li>
+                    <li>Climb to the summit of Tiger Cave Temple for panoramic views.</li>
+                    <li>Snorkel or dive around Hong Island to explore vibrant coral reefs.</li>
+                </ul>
+            </div>
 
-        <!-- Activities and Events Section -->
-        <div id="top-activities">
-            <h3>Top Rated Activities & Events</h3>
-            <ul>
-                <li>Rock climb the limestone cliffs at Railay Beach.</li>
-                <li>Take a boat tour to the famous Phi Phi Islands.</li>
-                <li>Swim in the crystal-clear waters of the Emerald Pool.</li>
-                <li>Climb to the summit of Tiger Cave Temple for panoramic views.</li>
-                <li>Snorkel or dive around Hong Island to explore vibrant coral reefs.</li>
-            </ul>
-        </div>
+        </section>
 
-    </section>
+        <!-- Footer Section -->
+        <footer>
+            <div class="footer-content">
+                <p>&copy; 2024 Come2Thailand. All rights reserved.</p>
+                <ul class="footer-links">
+                    <li><a href="../home.html">Home</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                    <li><a href="../info.html">Info</a></li>
+                </ul>
+                <p class="footer-social">
+                    <a href="http://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://www.x.com"><i class="fa-brands fa-x-twitter"></i></a>
+                </p>
+            </div>
+        </footer>
 
-    <!-- Footer Section -->
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Come2Thailand. All rights reserved.</p>
-            <ul class="footer-links">
-                <li><a href="../home.html">Home</a></li>
-                <li><a href="../contact.html">Contact</a></li>
-                <li><a href="../info.html">Info</a></li>
-            </ul>
-            <p class="footer-social">
-                <a href="http://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                <a href="http://www.x.com"><i class="fa-brands fa-x-twitter"></i></a>
-            </p>
-        </div>
-    </footer>
-
-    <script src="../../JS/weather_widget.js"></script>
-    <script src="../../JS/map_dropdown.js"></script>
-    <script src="../../JS/image_enlarge.js"></script>
-    <script src="../../JS/gallery_scroll.js"></script>
-    <script src="../../JS/hamburger_button.js"></script>
-</body>
+        <script src="../../JS/weather_widget.js"></script>
+        <script src="../../JS/map_dropdown.js"></script>
+        <script src="../../JS/image_enlarge.js"></script>
+        <script src="../../JS/gallery_scroll.js"></script>
+        <script src="../../JS/hamburger_button.js"></script>
+    </body>
 </html>
