--- a/thailand_website/HTML/destination_pages/Phi_Phi.html
+++ b/thailand_website/HTML/destination_pages/Phi_Phi.html
@@ -1,126 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phi Phi Islands | Come to Thailand</title>
-    <link type="text/css" rel="stylesheet" href="../../CSS/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/d085fdf720.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Phi Phi Islands | Come to Thailand</title>
+        <link type="text/css" rel="stylesheet" href="../../CSS/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/d085fdf720.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
 
-    <!-- Navigation Section -->
-    <header>
-        <nav class="navbar" aria-label="Main Navigation">
-            <a href="../home.html"><h1>
-                Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
-            </h1></a>
-            <button class="hamburger" aria-label="Menu">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <ul class="nav-links">
-                <li><a href="../home.html">Home</a></li>
-                <li><a href="../destinations.html">Destinations</a></li>
-                <li><a href="../activities.html">Activities</a></li>
-                <li><a href="../events.html">Events</a></li>
-                <li><a href="../gallery.html">Gallery</a></li>
-            </ul>
-        </nav>
-    </header>
+        <!-- Navigation Section -->
+        <header>
+            <nav class="navbar" aria-label="Main Navigation">
+                <a href="../home.html"><h1>
+                    Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
+                </h1></a>
+                <button class="hamburger" aria-label="Menu">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <ul class="nav-links">
+                    <li><a href="../home.html">Home</a></li>
+                    <li><a href="../destinations.html">Destinations</a></li>
+                    <li><a href="../activities.html">Activities</a></li>
+                    <li><a href="../events.html">Events</a></li>
+                    <li><a href="../gallery.html">Gallery</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <!-- Main Page Section -->
-    <section class="page" id="#location_page">
+        <!-- Main Page Section -->
+        <section class="page" id="#location_page">
 
-        <!-- Title Section -->
-        <div id="location-title">
-            <h2>Phi Phi Islands</h2>
-            <h3>The Jewel of the Andaman Sea</h3>
-        </div>
+            <!-- Title Section -->
+            <div id="location-title">
+                <h2>Phi Phi Islands</h2>
+                <h3>The Jewel of the Andaman Sea</h3>
+            </div>
 
-        <a class="weatherwidget-io" href="https://forecast7.com/en/8d0998d91/mueang-krabi-district/" data-label_1="MUEANG KRABI DISTRICT" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >MUEANG KRABI DISTRICT WEATHER</a>
+            <a class="weatherwidget-io" href="https://forecast7.com/en/8d0998d91/mueang-krabi-district/" data-label_1="MUEANG KRABI DISTRICT" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >MUEANG KRABI DISTRICT WEATHER</a>
 
+            <!-- Dropdown Buttons -->
+            <div class="dropdown-section">
+                <!-- View Map Button -->
+                <button class="dropdown-toggle" id="toggle-map">View Map</button>
+            
+                <!-- View Gallery Button -->
+                <button class="dropdown-toggle" id="toggle-gallery">View Gallery</button>
+            </div>
 
-        <!-- Dropdown Section -->
-        <div class="map-dropdown">
-            <button class="dropdown-toggle">View Map</button>
-            <div class="dropdown-content">
-
+            <div class="dropdown-content" id="map-dropdown">
                 <!-- Google Map Section -->
                 <div class="google_map_container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63251.068322198334!2d98.70309710930411!3d7.769478580342536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304e20be764e3d0d%3A0xbf9db8781a549f71!2sPhi%20Phi%20Islands!5e0!3m2!1sen!2suk!4v1733464973455!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                
             </div>
-        </div>
 
-        <!-- Gallery Section -->
-        <div id="image-gallery">
-            <div class="gallery-container">
-                <button class="scroll-btn scroll-left" aria-label="Scroll left"></button>
-                <div class="gallery-scroll">
-                    <img src="../../img/gallery/phi_phi_1.webp" alt="Maya Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_2.jpg" alt="Longtail Boats on the Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_4.jpg" alt="Phi Phi Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_5.jpg" alt="Snorkeling in Clear Waters" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_6.webp" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_7.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_8.webp" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_9.webp" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_10.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_11.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_12.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_13.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+            <!-- Gallery Section -->
+            <div class="dropdown-content" id="gallery-dropdown">
+                <div id="image-gallery">
+                    <div class="gallery-container">
+                        <button class="scroll-btn scroll-left" aria-label="Scroll left"></button>
+                        <div class="gallery-scroll">
+                            <img src="../../img/gallery/phi_phi_1.webp" alt="Maya Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_2.jpg" alt="Longtail Boats on the Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_4.jpg" alt="Phi Phi Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_5.jpg" alt="Snorkeling in Clear Waters" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_6.webp" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_7.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_8.webp" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_9.webp" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_10.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_11.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_12.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                            <img src="../../img/gallery/phi_phi_13.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                        </div>
+                        <button class="scroll-btn scroll-right" aria-label="Scroll right"></button>
+                    </div>
                 </div>
-                <button class="scroll-btn scroll-right" aria-label="Scroll right"></button>
             </div>
-        </div>
 
-        <!-- Description Section -->
-        <div id="location-description">
-            <h3>About Phi Phi Islands</h3>
-            <p>
-                The Phi Phi Islands are a stunning archipelago located in the Krabi Province of Southern Thailand. Famous for their dramatic limestone cliffs, crystal-clear waters, and vibrant marine life, the islands offer a slice of paradise. Maya Bay, featured in the movie "The Beach," is one of the most iconic spots. With opportunities for snorkeling, diving, hiking, and experiencing lively beach parties, Phi Phi Islands are a must-visit destination for travelers seeking both adventure and relaxation.
-            </p>
-        </div>
+            <!-- Description Section -->
+            <div id="location-description">
+                <h3>About Phi Phi Islands</h3>
+                <p>
+                    The Phi Phi Islands are a stunning archipelago located in the Krabi Province of Southern Thailand. Famous for their dramatic limestone cliffs, crystal-clear waters, and vibrant marine life, the islands offer a slice of paradise. Maya Bay, featured in the movie "The Beach," is one of the most iconic spots. With opportunities for snorkeling, diving, hiking, and experiencing lively beach parties, Phi Phi Islands are a must-visit destination for travelers seeking both adventure and relaxation.
+                </p>
+            </div>
 
-        <!-- Activities and Events Section -->
-        <div id="top-activities">
-            <h3>Top Rated Activities & Events</h3>
-            <ul>
-                <li>Visit Maya Bay to experience its stunning beauty (check for seasonal closures).</li>
-                <li>Go snorkeling or scuba diving to explore vibrant coral reefs.</li>
-                <li>Hike to the Phi Phi Viewpoint for panoramic views of the islands.</li>
-                <li>Explore Viking Cave and learn about its ancient paintings.</li>
-                <li>Enjoy the nightlife at Tonsai Bay with beach bars and fire shows.</li>
-            </ul>
-        </div>
+            <!-- Activities and Events Section -->
+            <div id="top-activities">
+                <h3>Top Rated Activities & Events</h3>
+                <ul>
+                    <li>Visit Maya Bay to experience its stunning beauty (check for seasonal closures).</li>
+                    <li>Go snorkeling or scuba diving to explore vibrant coral reefs.</li>
+                    <li>Hike to the Phi Phi Viewpoint for panoramic views of the islands.</li>
+                    <li>Explore Viking Cave and learn about its ancient paintings.</li>
+                    <li>Enjoy the nightlife at Tonsai Bay with beach bars and fire shows.</li>
+                </ul>
+            </div>
 
-    </section>
+        </section>
 
-    <!-- Footer Section -->
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Come2Thailand. All rights reserved.</p>
-            <ul class="footer-links">
-                <li><a href="../home.html">Home</a></li>
-                <li><a href="../contact.html">Contact</a></li>
-                <li><a href="../info.html">Info</a></li>
-            </ul>
-            <p class="footer-social">
-                <a href="http://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                <a href="http://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
-            </p>
-        </div>
-    </footer>
+        <!-- Footer Section -->
+        <footer>
+            <div class="footer-content">
+                <p>&copy; 2024 Come2Thailand. All rights reserved.</p>
+                <ul class="footer-links">
+                    <li><a href="../home.html">Home</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                    <li><a href="../info.html">Info</a></li>
+                </ul>
+                <p class="footer-social">
+                    <a href="http://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                </p>
+            </div>
+        </footer>
 
-    <script src="../../JS/weather_widget.js"></script>
-    <script src="../../JS/map_dropdown.js"></script>
-    <script src="../../JS/image_enlarge.js"></script>
-    <script src="../../JS/gallery_scroll.js"></script>
-    <script src="../../JS/hamburger_button.js"></script>
-</body>
+        <script src="../../JS/weather_widget.js"></script>
+        <script src="../../JS/map_dropdown.js"></script>
+        <script src="../../JS/image_enlarge.js"></script>
+        <script src="../../JS/gallery_scroll.js"></script>
+        <script src="../../JS/hamburger_button.js"></script>
+    </body>
 </html>
